--- a/src/common/common-properties/build.gradle
+++ b/src/common/common-properties/build.gradle
@@ -3,9 +3,7 @@ plugins {
 }
 
 dependencies {
-    implementation(platform(libs.springBoot.bom))
-
-    implementation("org.springframework.boot:spring-boot-starter")
+    api(libs.quarkus.springBoot.properties)
 }
 
 //todo: enable
