--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -32,6 +32,7 @@ include 'common:common-jetty'
 include 'common:common-message'
 include 'common:common-scheduler'
 include 'common:common-service-bootstrap'
+include 'common:common-quarkus-bootstrap'
 
 // Main projects
 include "proxy"
