chore: initial poc for quarkus.
Note:  this breaks spring compatability until that part is fixed

Refs: XRDDEV-2751

--- a/src/common/common-properties/build.gradle
+++ b/src/common/common-properties/build.gradle
@@ -3,7 +3,11 @@ plugins {
 }
 
 dependencies {
-    api(libs.quarkus.springBoot.properties)
+    implementation(platform(libs.springBoot.bom))
+    implementation("org.springframework.boot:spring-boot-starter")
+
+    api(libs.quarkus.springBoot.di)
+    api("io.smallrye.config:smallrye-config-core:3.10.2") //TODO test
 }
 
 //todo: enable
