--- a/src/proxy/application/src/main/resources/application-native.yaml
+++ b/src/proxy/application/src/main/resources/application-native.yaml
@@ -1,2 +1,8 @@
+quarkus:
+  package:
+    jar:
+      type: uber-jar
+      add-runner-suffix: false
+
 logging:
   config: classpath:logback-native.xml
