--- a/src/proxy/proxy-rpc-client/build.gradle
+++ b/src/proxy/proxy-rpc-client/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     implementation (project(':common:common-globalconf')) //for the ee.ria.xroad.common.DiagnosticsStatus
     implementation (project(':common:common-rpc'))
 
+    implementation(libs.quarkus.springBoot.di)
+
     api(libs.grpc.protobuf)
     api(libs.grpc.stub)
     api(libs.grpc.nettyShaded)
