--- a/src/common/common-verifier/build.gradle
+++ b/src/common/common-verifier/build.gradle
@@ -6,9 +6,10 @@ testJar.enabled = true
 
 dependencies {
     api project(':common:common-message')
-    api project(':common:common-scheduler')
     api project(':common:common-globalconf')
     api(project(':common:common-properties'))
+
+    implementation(libs.quarkus.springBoot.di)
 
     testImplementation project(':common:common-test')
 }
