--- a/src/proxy/core/build.gradle
+++ b/src/proxy/core/build.gradle
@@ -12,6 +12,7 @@ sourceSets {
 
 dependencies {
     implementation(libs.quarkus.scheduler)
+    implementation(libs.quarkus.grpc)
 
     implementation(project(':proxy:proxy-rpc-client'))
 
@@ -19,7 +20,6 @@ dependencies {
     implementation(project(':common:common-message'))
     implementation(project(':common:common-globalconf'))
     implementation(project(':common:common-keyconf'))
-    implementation(project(':common:common-scheduler'))
     implementation(project(':common:common-verifier'))
     implementation(project(':common:common-properties'))
     implementation(project(':serverconf'))
