chore: drop springframework references from commons
Refs: XRDDEV-2751

--- a/src/signer/core/build.gradle
+++ b/src/signer/core/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 
     testImplementation project(':common:common-test')
     testImplementation project(path: ':common:common-verifier', configuration: 'testArtifacts')
+    testImplementation 'org.springframework:spring-test'
 
     testImplementation libs.mockito.core
 
