chore: add k8 specific changes to quarkus poc
Refs: XRDDEV-2751

--- a/development/security-server-k8/deployment/charts/security_server/config/application.yaml
+++ b/development/security-server-k8/deployment/charts/security_server/config/application.yaml
@@ -13,8 +13,7 @@ xroad:
     global-conf-remoting-enabled: true
     serverconf:
       hibernate:
-        connection:
-          url: jdbc:postgresql://db-serverconf.ss.svc.cluster.local:5432/serverconf
+        connection.url: jdbc:postgresql://db-serverconf.ss.svc.cluster.local:5432/serverconf
     rpc:
       channel:
         configuration-client:
