--- a/src/proxy/application/src/main/resources/application-secret-store.yaml
+++ b/src/proxy/application/src/main/resources/application-secret-store.yaml
@@ -1,16 +1,21 @@
-spring:
-  config:
-    import:
-      - vault://xrd-secret/serverconf?prefix=secrets.serverconf.
-      - vault://xrd-secret/messagelog?prefix=secrets.messagelog.
+quarkus:
+  vault:
+    url: "${XROAD_SECRET_STORE_SCHEME:http}://${XROAD_SECRET_STORE_HOST:127.0.0.1}:${XROAD_SECRET_STORE_PORT:8200}"
+    authentication:
+      client-token: "${XROAD_SECRET_STORE_TOKEN}"
+    kv-secret-engine-version: 1
+    kv-secret-engine-mount-path: xrd-secret
+    secret-config-kv-path:
+      "secret-serverconf": serverconf
+      "secret-messagelog": messagelog
 
 xroad:
   common:
     serverconf:
       hibernate:
-        connection.username: "${secrets.serverconf.username}"
-        connection.password: "${secrets.serverconf.password}"
+        connection.username: "${secret-serverconf.username}"
+        connection.password: "${secret-serverconf.password}"
   messagelog:
     hibernate:
-      connection.username: "${secrets.messagelog.username}"
-      connection.password: "${secrets.messagelog.password}"
+      connection.username: "${secret-serverconf.username}"
+      connection.password: "${secret-serverconf.password}"
