fix: set HOME for supervisord services that run as xroad user
Refs: XRDDEV-2819

--- a/sidecar/files/ss-xroad.conf
+++ b/sidecar/files/ss-xroad.conf
@@ -15,6 +15,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-proxy-ui-api]
 command=/usr/share/xroad/bin/xroad-proxy-ui-api
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
@@ -22,6 +23,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-signer]
 command=/usr/share/xroad/bin/xroad-signer
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 priority=200
 stdout_logfile=/dev/stdout
@@ -30,6 +32,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-confclient]
 command=/usr/share/xroad/bin/xroad-confclient
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 priority=100
 stdout_logfile=/dev/stdout
@@ -37,6 +40,7 @@ stdout_logfile_maxbytes=0
 
 [program:xroad-proxy]
 user=xroad
+environment=HOME="/var/lib/xroad"
 command=/usr/share/xroad/bin/xroad-proxy
 autorestart=true
 stopwaitsecs=30
@@ -46,6 +50,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-autologin]
 command=/usr/share/xroad/autologin/xroad-autologin-retry.sh
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=false
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
@@ -53,6 +58,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-monitor]
 command=/usr/share/xroad/bin/xroad-monitor
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 priority=100
 stdout_logfile=/dev/stdout
@@ -61,6 +67,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-opmonitor]
 command=/usr/share/xroad/bin/xroad-opmonitor
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 priority=100
 stdout_logfile=/dev/stdout
@@ -69,6 +76,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-addon-messagelog]
 command=/usr/share/xroad/bin/xroad-messagelog-archiver
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
