--- a/sidecar/files/primary-slim-ss-xroad.conf
+++ b/sidecar/files/primary-slim-ss-xroad.conf
@@ -4,6 +4,7 @@ user=root
 [program:xroad-proxy-ui-api]
 command=/usr/share/xroad/bin/xroad-proxy-ui-api
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
@@ -11,6 +12,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-signer]
 command=/usr/share/xroad/bin/xroad-signer
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 priority=200
 stdout_logfile=/dev/stdout
@@ -19,6 +21,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-confclient]
 command=/usr/share/xroad/bin/xroad-confclient
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 priority=100
 stdout_logfile=/dev/stdout
@@ -27,6 +30,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-proxy]
 command=/usr/share/xroad/bin/xroad-proxy
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 stopwaitsecs=30
 stdout_logfile=/dev/stdout
@@ -35,6 +39,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-autologin]
 command=/usr/share/xroad/autologin/xroad-autologin-retry.sh
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=false
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
