--- a/sidecar/files/slim-ss-xroad.conf
+++ b/sidecar/files/slim-ss-xroad.conf
@@ -15,6 +15,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-proxy-ui-api]
 command=/usr/share/xroad/bin/xroad-proxy-ui-api
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
@@ -22,6 +23,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-signer]
 command=/usr/share/xroad/bin/xroad-signer
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 priority=200
 stdout_logfile=/dev/stdout
@@ -30,6 +32,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-confclient]
 command=/usr/share/xroad/bin/xroad-confclient
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 priority=100
 stdout_logfile=/dev/stdout
@@ -38,6 +41,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-proxy]
 command=/usr/share/xroad/bin/xroad-proxy
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=true
 stopwaitsecs=30
 stdout_logfile=/dev/stdout
@@ -46,6 +50,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-autologin]
 command=/usr/share/xroad/autologin/xroad-autologin-retry.sh
 user=xroad
+environment=HOME="/var/lib/xroad"
 autorestart=false
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
