--- a/src/proxy/application/src/main/resources/application.yaml
+++ b/src/proxy/application/src/main/resources/application.yaml
@@ -7,6 +7,8 @@ quarkus:
   vault:
     devservices:
         enabled: true
+  http:
+    host-enabled: false
   config:
     locations:
       - xroad-common.yaml
