--- a/ansible/roles/xroad-cp/tasks/main.yml
+++ b/ansible/roles/xroad-cp/tasks/main.yml
@@ -10,3 +10,7 @@
     state: latest
     force: yes
   when: ansible_os_family == "Debian"
+
+- name: Workaround for successfully installing ca-certificates-java
+  become: yes
+  shell: "_JAVA_OPTIONS=-XX:UseSVE=0 apt install --reinstall ca-certificates-java"
