--- a/ansible/roles/xroad-ss/tasks/ubuntu.yml
+++ b/ansible/roles/xroad-ss/tasks/ubuntu.yml
@@ -43,6 +43,10 @@
   tags:
     - install-xroad-ss-packages
 
+- name: Workaround for successfully installing ca-certificates-java
+  become: yes
+  shell: "_JAVA_OPTIONS=-XX:UseSVE=0 apt install --reinstall ca-certificates-java"
+
 - name: install op-monitoring
   package: name=xroad-addon-opmonitoring state=latest
   when: (xroad_install_opmonitoring is defined) and (xroad_install_opmonitoring)
