chore: configuration client migration to quarkus
Refs: XRDDEV-2751

--- a/src/common/common-properties/src/main/resources/xroad-ss-common.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-ss-common.yaml
@@ -1,4 +1,4 @@
-# Common properties that are injected to all  Central Server deployed services
+# Common properties that are injected to all Security Server deployed services
 
 xroad:
   common:
