--- a/src/common/common-scheduler/build.gradle
+++ b/src/common/common-scheduler/build.gradle
@@ -5,6 +5,9 @@ plugins {
 dependencies {
     api project(':common:common-core')
 
+    // todo add to toml
+    implementation group: 'jakarta.enterprise', name: 'jakarta.enterprise.cdi-api', version: '4.1.0'
+
     api(libs.quartz) {
         exclude module: 'c3p0'
     }
