chore: add confclient quarkus test
Refs: XRDDEV-2751

--- a/src/build.gradle
+++ b/src/build.gradle
@@ -13,6 +13,7 @@ plugins {
     id 'idea'
     alias(libs.plugins.springBoot) apply false
     alias(libs.plugins.archUnit) apply false
+    alias(libs.plugins.jandex) apply false
 }
 
 sonarqube {
