--- a/src/configuration-client/application/src/main/resources/application.yaml
+++ b/src/configuration-client/application/src/main/resources/application.yaml
@@ -5,21 +5,25 @@ quarkus:
   spring-di:
     enabled: true
   vault:
-#    devservices:
-#      enabled: true
+    devservices:
+      enabled: false
     url: "${XROAD_SECRET_STORE_SCHEME:http}://${XROAD_SECRET_STORE_HOST:127.0.0.1}:${XROAD_SECRET_STORE_PORT:8200}"
     authentication:
       client-token: "${XROAD_SECRET_STORE_TOKEN}"
     kv-secret-engine-version: 1
     kv-secret-engine-mount-path: xrd-secret
-#  http:
-#    host-enabled: false
+  live-reload:
+    enabled: false
+  http:
+    host-enabled: false
+  scheduler:
+    start-mode: forced
   config:
     locations:
       - xroad-common.yaml
-      - xroad-common-rpc-confclient.yaml
       - xroad-ss-common.yaml
-
+  log:
+    level: DEBUG
 #spring:
 #  application:
 #    name: configuration-client
