--- a/src/configuration-client/core/build.gradle
+++ b/src/configuration-client/core/build.gradle
@@ -1,22 +1,17 @@
 plugins {
     id 'java-library'
+    alias(libs.plugins.jandex)
 }
 
 dependencies {
-    implementation project(':common:common-globalconf')
-    implementation project(':common:common-jetty')
-    implementation project(':common:common-verifier')
-    implementation project(':common:common-rpc')
+    api project(':common:common-globalconf')
+    api project(':common:common-scheduler')
+    api project(':common:common-jetty')
+    api project(':common:common-rpc')
+    api project(":configuration-client:confclient-model")
 
-    implementation project(':common:common-scheduler')
+    api libs.commons.cli
 
-    implementation libs.commons.cli
-    implementation libs.quarkus.quartz
-
-    testImplementation project(':common:common-test')
     testImplementation libs.wiremock.standalone
-}
-
-jar {
-    archiveBaseName = 'configuration-client-core'
+    testImplementation libs.mockito.jupiter
 }
